--- a/Website/.github/workflows/deploy-docs.yml
+++ b/Website/.github/workflows/deploy-docs.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
       with:
-        path: './Website/docs'
+        path: './docs'
 
   deploy:
     environment:
